--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "@ascen/execzero",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "Shutdown your PC",
     "main": "build/index.js",
     "types": "build/index.d.ts",
     "exports": "./build/index.js",
+    "type": "module",
     "module": "./build/index.js",
     "bin": "build/bin.js",
     "files": [
