--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "@ascen/execzero",
     "version": "1.0.2",
     "description": "Shutdown your PC",
-    "main": "build/index.js",
+    "main": "./build/index.js",
     "types": "build/index.d.ts",
     "exports": "./build/index.js",
     "type": "module",
